# monad-var

./: .gitignore  MonadVar.cabal  README.md  monad-var.cabal  stack-7.19.yaml  stack.yaml
lts/: stack-7.19.yaml  stack-9.13.yaml
src/: MonadVar.hs
src/MonadVar/: Classes.hs  Combinators.hs  Compat.hs  Default.hs  Lens.hs  Prelude.hs
src/MonadVar/Instances/: IORef.hs  MVar.hs  STRef.hs  TMVar.hs  TVar.hs
