name:                MonadVar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/MonadVar#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MonadVar
  build-depends:       base >= 4.7 && < 5,
                       transformers,
                       stm
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind

source-repository head
  type:     git
  location: https://github.com/githubuser/MonadVar
